--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.12.5",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
