--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.1",
+    "d3-array": "^3.2.4",
+    "d3-scale": "^4.0.2",
     "drizzle-orm": "^0.30.8",
     "next": "14.2.1",
     "react": "^18",
