--- a/package.json
+++ b/package.json
@@ -12,13 +12,22 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.16.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "d3-scale": "^4.0.2",
     "drizzle-orm": "^0.30.8",
+    "lucide-react": "^0.376.0",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.5",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
